# mail.forwardemail.net

./: .gitignore  README.md  index.html  package.json  playwright.config.js  playwright.tauri.config.js  pnpm-lock.yaml  vite.config.js
.github/workflows/: build-desktop.yml  build-mobile.yml  ci.yml  e2e-apps.yml  release-desktop.yml  release-mobile.yml  release.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  PUSH_NOTIFICATIONS.md  RELEASES.md  SECRETS.md  SECURITY.md  TAURI_TESTING.md  WEBSOCKET.md  webmail-vision-gap-analysis.md
public/: fallback-recovery.js  sw-sync.js
scripts/: build-sw-sync.js
src/: main.ts
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/isolation/: index.html
src-tauri/src/: lib.rs  main.rs
src/stores/: mailService.ts  mailboxActions.ts  mailboxStore.ts  settingsRegistry.ts
src/svelte/: AppLockSettings.svelte  Calendar.svelte  Compose.svelte  LockScreen.svelte  Login.svelte  Mailbox.svelte  Settings.svelte
src/utils/: background-service.js  crypto-store.js  date.ts  demo-data.js  demo-mode.js  draft-service.js  favicon-badge.js  i18n.js  iframe-srcdoc.ts  inactivity-timer.js  inbox-poller.js  mailto-handler.js  mutation-queue.js  notification-bridge.js  notification-manager.js  outbox-service.js  passkey-auth.js  platform.js  preview.js  push-notifications.js  remote.js  sanitize.js  sodium-loader.js  sync-bridge.js  sync-core.js  sync-shim.js  sync-worker-client.js  tauri-bridge.js  unified-push.js  updater-bridge.js  web-updater.js  websocket-client.js  (+1 more)
(+27 files in other folders)
