[package]
name = "forwardemail-desktop"
version = "0.1.9"
description = "Forward Email - Privacy-focused email client"
authors = ["Forward Email <support@forwardemail.net>"]
license = "BUSL-1.1"
repository = "https://github.com/forwardemail/mail.forwardemail.net"
edition = "2021"

[lib]
name = "forwardemail_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["isolation"] }

[dependencies]
tauri = { version = "2", features = [
  "tray-icon",
  "image-png",
  "isolation",
] }
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

# Desktop-only plugins (not available on Android/iOS)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
